Connect calcite to collections